adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe obcaecati ducimus quaerat praesentium quod minus. Ullam soluta laboriosam nobis nam eos consectetur corporis voluptatum id, quaerat placeat sequi dignissimos deleniti?</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet, repellendus. Quas cupiditate vel itaque quaerat hic, aliquam quos. Vero aliquid explicabo facere eos molestias consectetur pariatur quibusdam excepturi voluptatum doloribus.</p>
 </body>
 </html>
